--- a/Example_Day3/app.json
+++ b/Example_Day3/app.json
@@ -3,7 +3,8 @@
       "pages/home/home",
       "pages/message/message",
       "pages/contact/contact",
-      "pages/info/info"
+      "pages/info/info",
+      "pages/reachbottom/reachbottom"
     ],
     "window": {
         "backgroundTextStyle": "light",
